--- a/index.html
+++ b/index.html
@@ -124,12 +124,10 @@
                 <div class="carousel-inner">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-12 col-lg-8 text-center">
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Best CCTV & Security Solution For You</h1>
-                                <p class="fs-5 text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
+                            <div class="col-12 col-lg-10 text-center">
+                                <h1 class="display-3 text-white animated slideInDown mb-4">We Design And Install Professional Security Systeams for Long Island,New york </h1>
                                 <a href="" class="btn btn-primary rounded-pill py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-light rounded-pill py-md-3 px-md-5 animated slideInRight">Free Quote</a>
-                            </div>
+                                </div>
                         </div>
                     </div>
                 </div>
@@ -139,12 +137,10 @@
                 <div class="carousel-inner">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-12 col-lg-8 text-center">
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Smart Security Solution For All Business</h1>
-                                <p class="fs-5 text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
+                            <div class="col-12 col-lg-10 text-center">
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Professional Security camera Installation Long Island,New York</h1>
                                 <a href="" class="btn btn-primary rounded-pill py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-light rounded-pill py-md-3 px-md-5 animated slideInRight">Free Quote</a>
-                            </div>
+                               </div>
                         </div>
                     </div>
                 </div>
@@ -154,12 +150,10 @@
                 <div class="carousel-inner">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-12 col-lg-8 text-center">
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Innovative Solution For Security System</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
-                                <a href="" class="btn btn-primary rounded-pill py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-light rounded-pill py-md-3 px-md-5 animated slideInRight">Free Quote</a>
-                            </div>
+                            <div class="col-12 col-lg-10 text-center">
+                                <h1 class="display-3 text-white animated slideInDown mb-4">We Will Provide Affordable Exceptional And Quality Security cameras long Island,New York</h1>
+                                 <a href="" class="btn btn-primary rounded-pill py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                              </div>
                         </div>
                     </div>
                 </div>
@@ -172,6 +166,7 @@
     <!-- Facts Start -->
     <div class="container-xxl py-5">
         <div class="container">
+            <h1 class="display-5 mb-5 text-center">Our Services</h1>
             <div class="row g-4">
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay="0.1s">
                     <div class="h-100 bg-dark p-4 p-xl-5">
@@ -181,9 +176,9 @@
                             </div>
                             <h1 class="display-1 mb-0" style="color: #000000;">01</h1>
                         </div>
-                        <h5 class="text-white">Home Security</h5>
+                        <h5 class="text-white">Smart Home Control</h5>
                         <hr class="w-25">
-                        <span>Vero elitr justo clita lorem ipsum dolor at sed stet sit diam rebum ipsum et diam justo clita et</span>
+                        <span>Our home automation is the residential extension of building automation. It is automation of the home, housework or household activity. Home automation may include centralized control of lighting, HVAC (heating, ventilation and air conditioning), appliances, security locks of gates and doors and other systems, to provide improved convenience, comfort, energy efficiency and security.</span>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay="0.3s">
@@ -194,9 +189,9 @@
                             </div>
                             <h1 class="display-1 mb-0" style="color: #000000;">02</h1>
                         </div>
-                        <h5 class="text-white">Access Control</h5>
+                        <h5 class="text-white">Security & Surveillance</h5>
                         <hr class="w-25">
-                        <span>Vero elitr justo clita lorem ipsum dolor at sed stet sit diam rebum ipsum et diam justo clita et</span>
+                        <span>If your home or office could talk to you, what would it say? Whether a door has been opened, a valuable has been moved or a flood has been detected, Our Total Security Connect from Alpha Computer Group can tell you! All you need is your laptop or cell phone to stay in the know and stay in control. With Total Security Connect from Alpha Computer Group, if it's happening in your home or office, it's happening on your phone.</span>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay="0.5s">
@@ -207,9 +202,9 @@
                             </div>
                             <h1 class="display-1 mb-0" style="color: #000000;">03</h1>
                         </div>
-                        <h5 class="text-white">24/7 Support</h5>
+                        <h5 class="text-white">24x7 Monitoring</h5>
                         <hr class="w-25">
-                        <span>Vero elitr justo clita lorem ipsum dolor at sed stet sit diam rebum ipsum et diam justo clita et</span>
+                        <span>We're looking out for you 24 hours a day, 7 days a week and regardless of when your system is activated, you can rest assured that the alarm is immediately processed and the proper authorities are notified. Your system is also capable of notifying us if the system needs maintenance. Alpha Computer Group also offers a Secured Monitoring service allowing your system to contact us even if the telephone lines are not functioning.</span>
                     </div>
                 </div>
             </div>
@@ -231,7 +226,7 @@
                     <div class="p-lg-5 pe-lg-0">
                         <div class="bg-primary mb-3" style="width: 60px; height: 2px;"></div>
                         <h1 class="display-5 mb-4">About Us</h1>
-                        <p class="mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
+                        <p class="mb-4 pb-2">Since 2004 Alpha Computer Group has helped companies of all sizes make the best use of their business technology. We also offer residential and home services as well. Our service, expertise and price can't be beat, we have all the expertise that you'll ever need - all under one roof!</p>
                         <div class="row g-4 mb-4 pb-3">
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="d-flex align-items-center">
@@ -269,8 +264,9 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center">
-                <div class="bg-primary mb-3 mx-auto" style="width: 60px; height: 2px;"></div>
+                <div class="bg-primary mb-5 mx-auto" style="width: 60px; height: 2px;"></div>
                 <h1 class="display-5 mb-5">Our Services</h1>
+                <p>Alpha Computer Group provides CCTV security camera installation services for commercial and industrial applications for Long Island. We also offer Residential Security Camera Systems. Home security camera systems can be installed throughout your home, including with the use of CCTV so that you can see all of the footage as it takes place. Click Here.</p>
             </div>
             <div class="row g-0 service-row">
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
