--- a/index.html
+++ b/index.html
@@ -521,8 +521,8 @@
                 <div class="col-lg-6 quote-text py-5 wow fadeIn" data-wow-delay="0.5s">
                     <div class="p-lg-5 pe-lg-0">
                         <div class="bg-primary mb-3" style="width: 60px; height: 2px;"></div>
-                        <h1 class="display-5 mb-5">Free Quote</h1>
-                        <p class="mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
+                        <h1 class="display-5 mb-5">Get Free Security Quote</h1>
+                        <p class="mb-4 pb-2">Contact Alpha Computer Group today. One of our Security Representatives will contact you immediately. We will then schedule an appointment for our Security Camera Installers Long Island to come out and give you a no cost/no obligation FREE estimate!</p>
                         <form>
                             <div class="row g-3">
                                 <div class="col-12 col-sm-6">
