--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
     <!-- Page Header End -->
 
 
-    <!-- Facts Start -->
+    <!-- Facts Start 
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-4">
@@ -179,7 +179,7 @@
             </div>
         </div>
     </div>
-    <!-- Facts Start -->
+     Facts Start -->
 
 
     <!-- About Start -->
@@ -195,7 +195,7 @@
                     <div class="p-lg-5 pe-lg-0">
                         <div class="bg-primary mb-3" style="width: 60px; height: 2px;"></div>
                         <h1 class="display-5 mb-4">About Us</h1>
-                        <p class="mb-4 pb-2">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
+                        <p class="mb-4 pb-2">Since 2004 Alpha Computer Group has helped companies of all sizes make the best use of their business technology. We also offer residential and home services as well. Our service, expertise and price can't be beat, we have all the expertise that you'll ever need - all under one roof!</p>
                         <div class="row g-4 mb-4 pb-3">
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="d-flex align-items-center">
@@ -227,7 +227,6 @@
         </div>
     </div>
     <!-- About End -->
-
 
     <!-- Team Start -->
     <div class="container-xxl py-5">
@@ -307,14 +306,15 @@
     <!-- Team End -->
         
 
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-secondary footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
+     <!-- Footer Start -->
+     <div class="container-fluid bg-dark text-secondary footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>888 Jackson Avenue
+                        Franklin Square, NY 11010</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i> +1(516)232-8932</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
@@ -323,6 +323,7 @@
                         <a class="btn btn-square btn-outline-secondary rounded-circle me-2" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
+                <!--
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Services</h5>
                     <a class="btn btn-link" href="">Business Security</a>
@@ -331,15 +332,16 @@
                     <a class="btn btn-link" href="">CCTV & Video</a>
                     <a class="btn btn-link" href="">Smart Home</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                -->
+                <div class="col-lg-4 col-md-6">
+                    <h5 class="text-light mb-4">Menu</h5>
+                    <a class="btn btn-link" href="index.html">Home</a>
+                    <a class="btn btn-link" href="about.html">About</a>
+                    <a class="btn btn-link" href="service.html">Services</a>
+                    <a class="btn btn-link" href="project.html">Project</a>
+                    <a class="btn btn-link" href="contact.html">Contact</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-4 col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
                     <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                     <div class="position-relative w-100">
