--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
                         <div class="section-title text-start">
                             <h1 class="display-5 mb-4">Contact Us</h1>
                         </div>
-                        <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                        <p class="mb-4">Contact Alpha Computer Group today. One of our Security Representatives will contact you immediately. We will then schedule an appointment for our Security Camera Installers Long Island to come out and give you a no cost/no obligation FREE estimate!</p>
                         <form>
                             <div class="row g-3">
                                 <div class="col-md-6">
