--- a/project.html
+++ b/project.html
@@ -42,7 +42,6 @@
     <!-- Spinner End -->
 
 
-    <!-- Topbar Start -->
     <div class="container-fluid bg-dark px-5">
         <div class="row gx-4 d-none d-lg-flex">
             <div class="col-lg-6 text-start">
@@ -50,7 +49,8 @@
                     <div class="btn-sm-square rounded-circle bg-primary me-2">
                         <small class="fa fa-map-marker-alt text-white"></small>
                     </div>
-                    <small>123 Street, New York, USA</small>
+                    <small>Address: 888 Jackson Avenue
+                        Franklin Square, NY 11010</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3">
                     <div class="btn-sm-square rounded-circle bg-primary me-2">
@@ -64,7 +64,7 @@
                     <div class="btn-sm-square rounded-circle bg-primary me-2">
                         <small class="fa fa-phone-alt text-white"></small>
                     </div>
-                    <small>+012 345 6789</small>
+                    <small>+1(516)232-8932</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3">
                     <div class="btn-sm-square rounded-circle bg-primary me-2">
