--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,9 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- Recaptcha -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
@@ -169,6 +172,7 @@
                                         <label for="message">Message</label>
                                     </div>
                                 </div>
+                                <div class="g-recaptcha" data-sitekey="6Lc-WDkqAAAAANLHYB7BmnwkHz7jSkGVvIRhKxZz"></div>
                                 <div class="col-12">
                                     <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
                                 </div>
