--- a/contact.html
+++ b/contact.html
@@ -229,8 +229,7 @@
                 <a class="btn btn-link" href="contact.html">Contact</a>
             </div>
             <div class="col-lg-4 col-md-6">
-                <h5 class="text-light mb-4">Newsletter</h5>
-                <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                <h5 class="text-light mb-4"><span style="color: red;">Alpha</span> Computer Group</h5>
                 <div class="position-relative w-100">
                     <input class="form-control bg-transparent border-secondary w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                     <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
