--- a/feature.html
+++ b/feature.html
@@ -5,9 +5,11 @@
     <meta charset="utf-8">
     <title>Alpha Computer Group</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
+    <meta name="keywords" content="security camera installers Long Island, security cameras systems Long Island, home security camera installers Long Island, residential security camera systems Long Island, residential security cameras Long Island, residential security camera installation Long Island, security cameras Long Island, video camera installers Long Island, companies that install home security cameras Long Island, security camera installer jobs Long Island, security camera installer license Long Island, security camera installer job description Long Island, parking lot security camera installation Long Island, parking lot security cameras Long Island, ip security camera systems Long Island, business security camera installation Long Island, business security camera systems Long Island, business security cameras Long Island, commercial security camera installation Long Island, commercial security camera systems Long Island, commercial security cameras Long Island, property management security cameras Long Island, industrial security cameras Long Island, network security cameras Long Island, network security camera systems Long Island, network security camera installers long Island, security camera installer Long Island." />
+	<meta name="description" content="Security Cameras, Installers, Video, IP, Camera, home, residential, business, schools, banks, Installation, network, nvr, Nassau, Suffolk, County." />
+	<meta name="author" content="Alpha Computer Group">
+<link rel="author" href="http://www.AlphaComputerGroup.com" />
+<link rel="publisher" href="https://plus.google.com/+Alphacomputergroup"/>
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
